[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/ScreenShake.gd" type="Script" id=1]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="ShakeTween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="Duration" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
